# oww_rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  detect_from_microphone.py  model.py  requirements.txt  tests.py  utils.py
.github/workflows/: rust.yml
crates/audio_tools/: Cargo.toml  README.md
crates/audio_tools/examples/: mic_to_chunks.rs
crates/audio_tools/src/: chunk.rs  converters.rs  denoiser.rs  lib.rs  mic_config.rs  process_audio.rs  resampler.rs  save.rs
crates/oww/: Cargo.toml  README.md
crates/oww/examples/: cpal_mycroft_test.rs  cpal_test.rs
crates/oww/speech_models/: ahoj_hugo.onnx
crates/oww/src/: config.rs  info.rs  lib.rs  mic_cpal.rs  model.rs  oww_tests.rs  tests.rs
crates/oww/src/oww/: audio.rs  oww_model.rs
examples/: cpal_mycroft_test.rs  cpal_test.rs  from_mic.rs  from_mic_tokio.rs
src/: audio.rs  config.rs  info.rs  lib.rs  mic.rs  model.rs  model_tests.rs  oww.rs  rms.rs  save.rs  tests.rs
src/mic/: converters.rs  mic_config.rs  mic_cpal.rs  process_audio.rs  resampler.rs
src/oww/: audio.rs  oww_model.rs
