[workspace]
members = ["crates/audio_tools", "crates/oww"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
audio_tools = { path = "crates/audio_tools" }
approx = "0.5"
chrono = "0.4"
circular-buffer = "0.1"
cpal = "0.18"
env_logger = "0.11"
hound = "3.5"
log = "0.4"
rubato = { version = "3.0", features = ["fft_resampler"] }
rust-embed = "8.5"
tokio = "1"
tokio-util = "0"
tract-core = "0.23"
tract-onnx = "0.23"
