[workspace]
members = ["crates/audio_tools", "crates/oww"]
resolver = "2"

[workspace.package]
version = "0.3.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/skoky/oww_rs"
homepage = "https://github.com/skoky/oww_rs"
authors = ["Skoky <skokys@gmail.com>"]
rust-version = "1.85"

[workspace.dependencies]
audio_tools = { path = "crates/audio_tools", version = "0.3.1" }
approx = "0.5"
chrono = "0.4"
circular-buffer = "1.2"
cpal = "0.17"
env_logger = "0.11"
hound = "3.5"
log = "0.4"
nnnoiseless = "0.5"
rubato = { version = "3.0", features = ["fft_resampler"] }
rust-embed = "8.5"
tokio = "1"
tokio-util = "0"
tract-core = "0.23"
tract-onnx = "0.23"
